--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <h2> </h2>
         <p> This is a temporary homepage served from a Github Repository</p>
         <a href="https://www.google.com/"> </a>
-        <a href="visitor_analysis_persona.html" alt= "link to Analysis">Visitor Analysis</a>
+        <a href="https://index.html" alt= "link to Analysis">Visitor Analysis</a>
     </body>
 </html>
