--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <title> Temporary Homepage</title>
     </head>
     <body>
-        <h1> aaronferguson.github.io</h1>
-        <h2> </h2>
+        <h1> aaronator1992.github.io</h1>
         <p> This is a temporary homepage served from a Github Repository</p>
         <a href="https://www.google.com/"> </a>
-        <a href="https://index.html" alt= "link to Analysis">Visitor Analysis</a>
+        <a href="/Homework/visitor_analysis_persona.html" alt= "link to Analysis">Visitor Analysis</a>
     </body>
 </html>
