--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <body>
         <h1> aaronator1992.github.io</h1>
         <p> This is a temporary homepage served from a Github Repository</p>
-        <a href="https://www.google.com/"> </a>
-        <a href="/Homework/visitor_analysis_persona.html" alt= "link to Analysis">Visitor Analysis</a>
+        <a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a>
     </body>
 </html>
 
