--- a/Homework/visitor_analysis_persona.html
+++ b/Homework/visitor_analysis_persona.html
@@ -11,10 +11,10 @@
 <body>
     <div id="wrapper">
         <header>
-            <h1>Speedhunters.com</h1>
+            <h1>Speedhunters</h1>
         </header>
         <nav>
-            <p>Navigation Here</p>
+            <p><a href="https//speedhunters.com">Link to Speedhunters</a></p>
         </nav>
         <main>
             <h1>Visitor Analysis and Persona</h1>
@@ -61,7 +61,9 @@ Use the web site you think did the best job of meeting visitor needs during your
                     <img alt="" src="/Images/Vaughn-Gittin.jpg">
                 </figure>
             </section>
-
+            <section id="site contrast"> <h2> Site Contrast</h2>
+                <p>The worst website is https//my.byui.edu in terms of mobility. The speedhunter differs because anyone can sign up for classes at my.byui.edu on a laptop. However, on a smart device, the BYUI site forces you to zoom in at times to push a button on the screen of the smart device. the needs of the student showcases the situation in which the new student is getting to class for the first time. they have to login to the site, then traverse several different access points to get to their needed information. this is more complicated then just clicking the picture link for the article at speedhunters.</p>
+            </section>
         </main>
         <footer>
             <ul>
