--- a/Homework/visitor_analysis_persona.html
+++ b/Homework/visitor_analysis_persona.html
@@ -31,7 +31,11 @@ Use the web site you think did the best job of meeting visitor needs during your
 
                 <h2>Visitor Analysis</h2>
                 <!--Add paragraphs to address the items in the visitor considerations document-->
-                <p>The demographics for this site has several general demographics. the age can range from a 12 year old kid to an old geezer of 60-80 years of age. The income for the auto enthusiast can range from middle class to very welthy persons. The geographic location  ranges from the US to Japan and other countries. The site creates an easy feel to the navigation. one simple click and you are in the article of your desired choice. The simplicity of pictures mixed with headings creates a focused approach to the site. To find trhe content, you simply scrool through the images and find the one article to read. if your need to find a specifoc catagory you then find the search icon located at the top and type in your car that you want to find.</p>
+                <p>The demographics for this site has several general demographics. The age can range from a 12 year old kid to an old geezer of 60-80 years of age.<br>
+                    The income for the auto enthusiast can range from middle class to very welthy persons. The geographic location ranges from the US to Japan and other countries.<br>
+                    The site creates an easy feel to the navigation. One simple click and you are in the article of your desired choice.<br>
+                    The simplicity of pictures mixed with headings creates a focused approach to the site. To find the content, you simply scroll through the images and find the one article to read.<br>
+                    If your need to find a specifoc catagory, you then find the search icon located at the top and type in your car that you want to find.</p>
 
                 <!--Put the screenshot in the img element below-->
                 <figure>
@@ -53,8 +57,7 @@ Use the web site you think did the best job of meeting visitor needs during your
                     He is used to the computer amd refers to himself as an expert in web-browsing.<br>
                     He is connected via T1 at work and xfinity at home.<br>
                     He uses the web for 1 hour aranging apointments for work.
-
-                    </p>
+                </p>
 
                 <!--Put the image of the persona in the img element below-->
                 <figure>
@@ -62,7 +65,12 @@ Use the web site you think did the best job of meeting visitor needs during your
                 </figure>
             </section>
             <section id="site contrast"> <h2> Site Contrast</h2>
-                <p>The worst website is https//my.byui.edu in terms of mobility. The speedhunter differs because anyone can sign up for classes at my.byui.edu on a laptop. However, on a smart device, the BYUI site forces you to zoom in at times to push a button on the screen of the smart device. the needs of the student showcases the situation in which the new student is getting to class for the first time. they have to login to the site, then traverse several different access points to get to their needed information. this is more complicated then just clicking the picture link for the article at speedhunters.</p>
+                <p>The worst website is https//my.byui.edu in terms of mobility. The speedhunter differs because anyone can sign up for classes at my.byui.edu on a laptop.<br>
+                   However, on a smart device, the BYUI site forces you to zoom in at times to push a button on the screen of the smart device.<br>
+                   The needs of the student showcases the situation in which the new student is getting to class for the first time.<br>
+                   They have to login to the site, then traverse several different access points to get to their needed information.<br>
+                   This is more complicated then just clicking the picture link for the article at speedhunters.
+                </p>
             </section>
         </main>
         <footer>
@@ -75,7 +83,6 @@ Use the web site you think did the best job of meeting visitor needs during your
                     1/21/2017
                 </li>
             </ul>
-            <p> </p>
         </footer>
     </div>
 </body>
