--- a/Homework/visitor_analysis_persona.html
+++ b/Homework/visitor_analysis_persona.html
@@ -14,7 +14,7 @@
             <h1>Speedhunters</h1>
         </header>
         <nav>
-            <p><a href="https//speedhunters.com">Link to Speedhunters</a></p>
+            <p></p>
         </nav>
         <main>
             <h1>Visitor Analysis and Persona</h1>
@@ -65,6 +65,8 @@ Use the web site you think did the best job of meeting visitor needs during your
                 </figure>
             </section>
             <section id="site contrast"> <h2> Site Contrast</h2>
+                <p>myBYUI</p>
+                <p> https//my.byui.edu</p>
                 <p>The worst website is https//my.byui.edu in terms of mobility. The speedhunter differs because anyone can sign up for classes at my.byui.edu on a laptop.<br>
                    However, on a smart device, the BYUI site forces you to zoom in at times to push a button on the screen of the smart device.<br>
                    The needs of the student showcases the situation in which the new student is getting to class for the first time.<br>
