--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-    <body background = "2016_pagani_huayra_bc_13_2560x1440.jpg" style = "height:1440px;width:2560px">
+    <body background = "2016_pagani_huayra_bc_13_2560x1440.jpg" style = "height:1440px;width:2560px"></body>
     <title> Temporary Homepage</title>
 
     </head>
