--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
 <meta charset="utf-8">
     <style>
-    body {background = "2016_pagani_huayra_bc_13_2560x1440.jpg" style = "height:1440px;width:2560px"}
+    #content{
+        }
     </style>
     <title> Temporary Homepage</title>
 
     </head>
+    <div id="content">
     <body>
         <h1> aaronator1992.github.io</h1>
         <p> This is a temporary homepage served from a Github Repository</p>
         <a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a><br>
         <a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a>
-    </body>
-</html>
+
+        </body>
+    </div>
+  </html>
 
