--- a/Homework/weather_analysis_persona.html
+++ b/Homework/weather_analysis_persona.html
@@ -4,76 +4,45 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Visitor Analysis and Persona</title>
+<title>Weather Analysis Persona</title>
 <meta name="viewport" content="width=device-width">
+    <style>
+
+    </style>
 </head>
 
+<div>
 <body>
 <div id="wrapper">
 <header>
-<h1>Speedhunters</h1>
+    <h1>Weather Site Purpose Statment and Site Audience Persona</h1>
 </header>
 <nav>
-<p></p>
+    <ul><li><a href= "https://aaronator1992.github.io/index.html">Homepage</a></li></ul>
 </nav>
 <main>
-<h1>Visitor Analysis and Persona</h1>
-<!-- ***********************************************
-Use the web site you think did the best job of meeting visitor needs during your 24 hour mobile browsing experience.
-************************************************* -->
-<h2>Speedhunters</h2>
+<section id="purpose statment">
 
-<p>URL:Https//www.speedhunters.com
-<!--Put the site URL here-->
-</p>
-
-<section id="analysis">
-
-<h2>Visitor Analysis</h2>
+<h2>Weather Purpose Statment</h2>
 <!--Add paragraphs to address the items in the visitor considerations document-->
-<p>The demographics for this site has several general demographics. The age can range from a 12 year old kid to an old geezer of 60-80 years of age.<br>
-The income for the auto enthusiast can range from middle class to very welthy persons. The geographic location ranges from the US to Japan and other countries.<br>
-The site creates an easy feel to the navigation. One simple click and you are in the article of your desired choice.<br>
-The simplicity of pictures mixed with headings creates a focused approach to the site. To find the content, you simply scroll through the images and find the one article to read.<br>
-If your need to find a specifoc catagory, you then find the search icon located at the top and type in your car that you want to find.</p>
+<p> The site purpose is to keep travelers aware of current and future weather conditions.<br>
+    wether there is sunny weather, cloudy weather or snowy weather, people need to have the information at their fingertips on 3 diferent devices.<br>
+    Some people may have all 3 devices. Others may only have a laptop.</p>
 
-<!--Put the screenshot in the img element below-->
-<figure>
-<img alt="" src="/Images/IMG_1727.PNG">
-</figure>
+
 </section>
-<section id="persona">
-<h2>Persona</h2>
+<section id="audience persona">
+<h2> Site Audience Persona</h2>
 
-<p> Automotive Tech<br>
-Van Fosberg<br>
-40 years of age<br>
-Married <br>
-Father of 2 children <br>
-Has a degree in Automotive Technology<br>
-He is enthusiastic, passionate in his work<br>
-Spends his work time working on projects<br>
-Communicates with his team on which car should come first<br>
-He is used to the computer amd refers to himself as an expert in web-browsing.<br>
-He is connected via T1 at work and xfinity at home.<br>
-He uses the web for 1 hour aranging apointments for work.
+<p> Middle aged persona to old folk with families involved.<br>
+Communicates with their family members on which weather forcast should be top priority.<br>
+He is used to the computer and reasures you that he is quite capable in browsing the internet.<br>
+The internet connection depends on the financial state of the family.<br>
+they use the web for 10-20 minutes studying the weather forecast.
 </p>
-
 <!--Put the image of the persona in the img element below-->
-<figure>
-<img alt="" src="/Images/Vaughn-Gittin.jpg">
-</figure>
 </section>
-<section id="site contrast"> <h2> Site Contrast</h2>
-<p>myBYUI</p>
-<p> https//my.byui.edu</p>
-<p>The worst website is https//my.byui.edu in terms of mobility. The speedhunter differs because anyone can sign up for classes at my.byui.edu on a laptop.<br>
-However, on a smart device, the BYUI site forces you to zoom in at times to push a button on the screen of the smart device.<br>
-The needs of the student showcases the situation in which the new student is getting to class for the first time.<br>
-They have to login to the site, then traverse several different access points to get to their needed information.<br>
-This is more complicated then just clicking the picture link for the article at speedhunters.
-</p>
-</section>
+
 </main>
 <footer>
 <ul>
@@ -88,5 +57,5 @@ Aaron Ferguson
 </footer>
 </div>
 </body>
-
+    </div>
 </html>
