--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
 <meta charset="utf-8">
     <style>
+        #top-row{background-color: aqua}
     #content{
         }
     </style>
     <title> Temporary Homepage</title>
 
     </head>
+    <div id="top-row">
+    <header>
+    </header>
+    </div>
     <div id="content">
     <body>
         <h1> aaronator1992.github.io</h1>
         <p> This is a temporary homepage served from a Github Repository</p>
         <a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a><br>
         <a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a>
-
-        </body>
+        <a href="https://aaronator1992.github.io/Homework/weather_analysis_persona.html">Weather Analysis Persona</a>
+    </body>
     </div>
   </html>
 
