--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
     <style>
-        #top-row{background-color: aqua}
+        #top-row{
+            background-color: aqua}
     #content{
         }
     </style>
@@ -12,6 +13,7 @@
     </head>
     <div id="top-row">
     <header>
+        <h1>Temprary Homepage</h1>
     </header>
     </div>
     <div id="content">
