--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
     <style>
-        #top-row{
+        #top-row{padding: 20em;}
             background-color: aqua}
     #content{
         }
