--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     <body>
         <h1> aaronator1992.github.io</h1>
         <p> This is a temporary homepage served from a Github Repository</p>
-        <a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a><br>
-        <a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a>
-        <a href="https://aaronator1992.github.io/Homework/weather_analysis_persona.html">Weather Analysis Persona</a>
+        <ul>
+            <li><a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a></li>
+            <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
+            <li><a href="https://aaronator1992.github.io/Homework/weather_analysis_persona.html">Weather Analysis Persona</a></li>
+        </ul>
     </body>
     </div>
   </html>
