--- a/Homework/visitor_analysis_persona.html
+++ b/Homework/visitor_analysis_persona.html
@@ -14,7 +14,9 @@
             <h1>Speedhunters</h1>
         </header>
         <nav>
-            <p></p>
+            <ul>
+                <li><a href="https://aaronator1992.github.io/"> Homepage </a> </li>
+            </ul>
         </nav>
         <main>
             <h1>Visitor Analysis and Persona</h1>
