--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="utf-8">
     <style>
+        #h1{ color:white; }
+        #h2{ color:white; }
+        #p { color:aqua;  }
         #top-header{font-family:monospace ,sans-serif;}
         #top-row{padding: 5em;
             background-color: aqua}
@@ -14,12 +17,12 @@
     </head>
     <div id="top-row">
     <header id= "top-header">
-        <h1>Temprary Homepage</h1>
+        <h1>Temporary Homepage</h1>
     </header>
     </div>
     <div id="content">
     <body>
-        <h1> aaronator1992.github.io</h1>
+        <h2> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
         <ul>
             <li><a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a></li>
