--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
     <style>
-        #h1{ color:white; }
-        #h2{ color:white; }
-        #p { color:aqua;  }
+        h1{ color:white; }
+        h2{ color:white; }
+        p { color:aqua;  }
         #top-header{font-family:monospace ,sans-serif;}
         #top-row{padding: 5em;
             background-color: aqua}
