--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
     <style>
-        body {background = "background.jpg"}
+        body {background: "background.jpg";}
         h1{ color:white; }
         h2{ color:white; }
         p { color:aqua;  }
