--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
     <style>
-        body {background-image: "background.jpg";}
+        #main {background-image: "background.jpg";}
         h1{ color:white; }
         h2{ color:white; }
         p { color:aqua;  }
@@ -22,7 +22,7 @@
     </header>
     </div>
     <div id="content">
-    <body>
+    <body id= "main">
         <h2> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
         <ul>
