--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
+    <body background = "background.jpg">
     <style>
-        #main {background-image: "background.jpg";}
+
         h1{ color:white; }
         h2{ color:white; }
         p { color:aqua;  }
