--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-    <body background = "background.jpg">
+
     <style>
 
         h1{ color:white; }
@@ -24,6 +24,7 @@
     </div>
 
     <body id= "main">
+        <background: img alt="" src="/Images/background.jpg">
         <h2> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
         <ul>
