--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8">
 
     <style>
-      body  {background-image:  url(background.jpg);}
         h1{ color:white; }
         h2{ color:white; }
         p { color:aqua;  }
@@ -20,6 +19,12 @@
     <div id="top-row">
     <header id= "top-header">
         <h1>Temporary Homepage</h1>
+        <nav id= "nav">
+            <ul>
+            <li><a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a></li>
+            <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
+            <li><a href="https://aaronator1992.github.io/Homework/weather_analysis_persona.html">Weather Analysis Persona</a></li>
+            </ul> </nav>
     </header>
     </div>
 
@@ -27,11 +32,7 @@
         <background: img alt="" src="/Images/background.jpg">
         <h2> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
-        <ul>
-            <li><a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a></li>
-            <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
-            <li><a href="https://aaronator1992.github.io/Homework/weather_analysis_persona.html">Weather Analysis Persona</a></li>
-        </ul>
+
     </body>
 
   </html>
