--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         #top-header{font-family:monospace ,sans-serif;}
         #top-row{padding: 5em;
             background-color: aqua}
-    #content{
-        }
+
     </style>
     <title> Temporary Homepage</title>
 
@@ -19,17 +18,20 @@
     <div id="top-row">
     <header id= "top-header">
         <h1>Temporary Homepage</h1>
+        <div>
         <nav id= "nav">
             <ul>
             <li><a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a></li>
             <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
             <li><a href="https://aaronator1992.github.io/Homework/weather_analysis_persona.html">Weather Analysis Persona</a></li>
-            </ul> </nav>
+            </ul>
+        </nav>
+        </div>
     </header>
     </div>
 
     <body id= "main">
-        <background: img alt="" src="/Images/background.jpg">
+        <background: img alt="" src="/Images/background.jpg"></background:>
         <h2> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
 
