--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 
     <style>
+        tech{ background: img alt="" src="/Images/background.jpg";}
         h1{ color:white; }
         h2{ color:white; }
         p { color:aqua;  }
@@ -29,13 +30,12 @@
         </div>
     </header>
     </div>
-
+<div id="tech">
     <body id= "main">
-        <background: img alt="" src="/Images/background.jpg"></background:>
         <h2> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
 
     </body>
-
+    </div>
   </html>
 
