--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 
     <style>
-        body{ background-image:url(Images/background.jpg);}
+        #tech{ background-image:url(Images/background.jpg);}
         h1{ color:white; }
         h2{ color:white; }
         p { color:aqua;  }
