--- a/Homework/visitor_analysis_persona.html
+++ b/Homework/visitor_analysis_persona.html
@@ -6,11 +6,21 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Visitor Analysis and Persona</title>
     <meta name="viewport" content="width=device-width">
+    <style>
+        #tech{ background-image:url(Images/background.jpg);}
+        h1{ color:white; }
+        h2{ color:white; }
+        p { color:aqua;  }
+        #top-header{font-family:monospace ,sans-serif;}
+        #top-row{padding: 0em;
+            background-color: aqua}
+
+    </style>
 </head>
 
 <body>
     <div id="wrapper">
-        <header>
+        <header id="top-header">
             <h1>Speedhunters</h1>
         </header>
         <nav>
