--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <style>
 
-        #tech{ background-image:url(Images/background.jpg);}
+        tech{ background-image:url(Images/background.jpg);}
         h1{ color:white; }
         h2{ color:white; }
         p { color:aqua;  }
