--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     </div>
 <div id="tech">
-    <body id= "main">
+    <body>
         <h2> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
 
