--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="utf-8">
 
     <style>
+      /*  body {
+            background: url(sweettexture.jpg);
+        }*/
         #tech{ background-image:url(Images/background.jpg);}
         h1{ color:white; }
         h2{ color:white; }
@@ -16,8 +19,9 @@
     <title> Temporary Homepage</title>
 
     </head>
-    <div id="top-row">
-    <header id= "top-header">
+
+
+        <header id= "top-header">
         <h1>Temporary Homepage</h1>
         <div>
         <nav id= "nav">
@@ -29,7 +33,7 @@
         </nav>
         </div>
     </header>
-    </div>
+
 <div id="tech">
     <body>
         <h2> aaronator1992.github.io</h2>
