--- a/index.html
+++ b/index.html
@@ -2,44 +2,28 @@
 <html>
 <head>
 <meta charset="utf-8">
-
-    <style>
-      /*  body {
-            background: url(sweettexture.jpg);
-        }*/
-        #tech{ background-image:url(Images/background.jpg);}
-        h1{ color:white; }
-        h2{ color:white; }
-        p { color:aqua;  }
-        #top-header{font-family:monospace ,sans-serif;}
-        #top-row{padding: 0em;
-            background-color: aqua}
-
-    </style>
-    <title> Temporary Homepage</title>
-
-    </head>
+<title> Temporary Homepage </title>
+<link rel="stylesheet" href="/Homework/css/style.css">
+</head>
 
 
-        <header id= "top-header">
+        <header>
         <h1>Temporary Homepage</h1>
-        <div>
-        <nav id= "nav">
+        <nav>
             <ul>
             <li><a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a></li>
             <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
             <li><a href="https://aaronator1992.github.io/Homework/weather_analysis_persona.html">Weather Analysis Persona</a></li>
             </ul>
         </nav>
-        </div>
     </header>
 
-<div id="tech">
+
     <body>
+
         <h2> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
 
     </body>
-    </div>
   </html>
 
