--- a/Homework/visitor_analysis_persona.html
+++ b/Homework/visitor_analysis_persona.html
@@ -6,9 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Visitor Analysis and Persona</title>
     <meta name="viewport" content="width=device-width">
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="/Homework/css/style2.css">
 </head>
 
 <body>
