--- a/Homework/weather_analysis_persona.html
+++ b/Homework/weather_analysis_persona.html
@@ -24,7 +24,7 @@
 <section id="purpose statment">
 
 <h2>Weather Purpose Statment</h2>
-<!--Add paragraphs to address the items in the visitor considerations document-->
+
 <p> The site purpose is to keep travelers aware of current and future weather conditions.<br>
     wether there is sunny weather, cloudy weather or snowy weather, people need to have the information at their fingertips on 3 diferent devices.<br>
     Some people may have all 3 devices. Others may only have a laptop.</p>
@@ -40,8 +40,12 @@ He is used to the computer and reasures you that he is quite capable in browsing
 The internet connection depends on the financial state of the family.<br>
 they use the web for 10-20 minutes studying the weather forecast.
 </p>
-<!--Put the image of the persona in the img element below-->
+
 </section>
+    <section>
+        <h2> Peer Review </h2>
+        <p></p>
+    </section>
 
 </main>
 <footer>
