--- a/Homework/weather_analysis_persona.html
+++ b/Homework/weather_analysis_persona.html
@@ -23,7 +23,7 @@
 <main>
 <section id="purpose statment">
 
-<h2>Weather Purpose Statment</h2>
+<h2>Weather Purpose Statement</h2>
 
 <p> The site purpose is to keep travelers aware of current and future weather conditions.<br>
     wether there is sunny weather, cloudy weather or snowy weather, people need to have the information at their fingertips on 3 diferent devices.<br>
@@ -32,16 +32,43 @@
 
 </section>
 <section id="audience persona">
-<h2> Site Audience Persona</h2>
+<h2> Site Audience</h2>
 
 <p> Middle aged persona to old folk with families involved.<br>
 Communicates with their family members on which weather forcast should be top priority.<br>
-He is used to the computer and reasures you that he is quite capable in browsing the internet.<br>
+determines the best day to leave on a vacation by the weather site.<br>
 The internet connection depends on the financial state of the family.<br>
-they use the web for 10-20 minutes studying the weather forecast.
+They use the web for 10-20 minutes studying the weather forecast.
 </p>
 
 </section>
+    <section>
+        <h2>Sketches</h2>
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
+    <section>
+        <h2>Persona</h2>
+        <p> Meterologist<br>
+            <br>
+            60 years of age<br>
+            Married <br>
+            Father of 3 children <br>
+            Has a degree in meterology<br>
+            He is enthusiastic, passionate in his work<br>
+            Spends his work time working on projects<br>
+            Communicates with his team on which car should come first<br>
+            He is used to the computer amd refers to himself as an expert in web-browsing.<br>
+            He is connected via T1 at work and xfinity at home.<br>
+            He uses the web for 4 hours studying the weather for broadcasting purposes.
+        </p>
+
+        <!--Put the image of the persona in the img element below-->
+        <figure>
+            <img alt="" src="/Images/methode%252Fsundaytimes%252Fprod%252Fweb%252Fbin%252Fdb683a3e-bb8c-11e5-a0d6-a9b02bfe94b3.jpg">
+        </figure>
+    </section>
     <section>
         <h2> Peer Review </h2>
         <p></p>
