--- a/Homework/weather_analysis_persona.html
+++ b/Homework/weather_analysis_persona.html
@@ -44,9 +44,9 @@ They use the web for 10-20 minutes studying the weather forecast.
 </section>
     <section>
         <h2>Sketches</h2>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div><img alt="" src="/Images/IMG_1744.JPG"></div>
+        <div><img alt="" src="/Images/IMG_1745.JPG"></div>
+        <div><img alt="" src="/Images/IMG_1746.JPG"></div>
     </section>
     <section>
         <h2>Persona</h2>
