--- a/Homework/weather_analysis_persona.html
+++ b/Homework/weather_analysis_persona.html
@@ -51,7 +51,7 @@ They use the web for 10-20 minutes studying the weather forecast.
     <section>
         <h2>Persona</h2>
         <p> Meterologist<br>
-            <br>
+            Jeremy Matterson <br>
             60 years of age<br>
             Married <br>
             Father of 3 children <br>
