--- a/Homework/weather_analysis_persona.html
+++ b/Homework/weather_analysis_persona.html
@@ -33,9 +33,9 @@
 
 </section>
 <section id="audience persona">
-<h2> Site Audience</h2>
+<h2> Site Audience Persona</h2>
 
-<p> Middle aged persona to old folk with families involved.<br>
+<p> Middle aged persons to old folk with families involved.<br>
 Communicates with their family members on which weather forcast should be top priority.<br>
 determines the best day to leave on a vacation by the weather site.<br>
 The internet connection depends on the financial state of the family.<br>
