--- a/Homework/visitor_analysis_persona.html
+++ b/Homework/visitor_analysis_persona.html
@@ -42,7 +42,7 @@ Use the web site you think did the best job of meeting visitor needs during your
 
                 <!--Put the screenshot in the img element below-->
                 <figure>
-                    <img alt="" src="/Images/IMG_1727.PNG">
+                    <img alt="" src="/Images/Site%25202/IMG_1727.PNG">
                 </figure>
             </section>
             <section id="persona">
@@ -64,7 +64,7 @@ Use the web site you think did the best job of meeting visitor needs during your
 
                 <!--Put the image of the persona in the img element below-->
                 <figure>
-                    <img alt="" src="/Images/Vaughn-Gittin.jpg">
+                    <img alt="" src="/Images/Site%25202/Vaughn-Gittin.jpg">
                 </figure>
             </section>
             <section id="site contrast"> <h2> Site Contrast</h2>
