--- a/Homework/weather_analysis_persona.html
+++ b/Homework/weather_analysis_persona.html
@@ -45,9 +45,9 @@ They use the web for 10-20 minutes studying the weather forecast.
 </section>
     <section>
         <h2>Sketches</h2>
-        <div><img alt="" src="/Images/IMG_1744.JPG"></div>
-        <div><img alt="" src="/Images/IMG_1745.JPG"></div>
-        <div><img alt="" src="/Images/IMG_1746.JPG"></div>
+        <div><img alt="" src="/Images/Site%25203/IMG_1744.JPG"></div>
+        <div><img alt="" src="/Images/Site%25203/IMG_1745.JPG"></div>
+        <div><img alt="" src="/Images/Site%25203/IMG_1746.JPG"></div>
     </section>
     <section>
         <h2>Persona</h2>
@@ -67,7 +67,7 @@ They use the web for 10-20 minutes studying the weather forecast.
 
         <!--Put the image of the persona in the img element below-->
         <figure>
-            <img alt="" src="/Images/methode%252Fsundaytimes%252Fprod%252Fweb%252Fbin%252Fdb683a3e-bb8c-11e5-a0d6-a9b02bfe94b3.jpg">
+            <img alt="" src="/Images/Site%25203/methode%252Fsundaytimes%252Fprod%252Fweb%252Fbin%252Fdb683a3e-bb8c-11e5-a0d6-a9b02bfe94b3.jpg">
         </figure>
     </section>
     <section>
