--- a/Homework/weather_analysis_persona.html
+++ b/Homework/weather_analysis_persona.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <title>Weather Analysis Persona</title>
-    <!--<link rel="stylesheet" href="/Homework/css/style.css">-->
+    <link rel="stylesheet" href="/Homework/css/style3.css">
 <meta name="viewport" content="width=device-width">
     <style>
 
