--- a/Homework/weather_analysis_persona.html
+++ b/Homework/weather_analysis_persona.html
@@ -45,9 +45,15 @@ They use the web for 10-20 minutes studying the weather forecast.
 </section>
     <section>
         <h2>Sketches</h2>
+        <h3> Before</h3>
         <div><img alt="" src="/Images/IMG_1744.JPG"></div>
         <div><img alt="" src="/Images/IMG_1745.JPG"></div>
         <div><img alt="" src="/Images/IMG_1746.JPG"></div>
+        <h3>After</h3>
+        <div><img alt="" src="/Images/IMG_1748.JPG"></div>
+        <div><img alt="" src="/Images/IMG_1749.JPG"></div>
+        <div><img alt="" src="/Images/IMG_1750.JPG"></div>
+
     </section>
     <section>
         <h2>Persona</h2>
@@ -72,7 +78,7 @@ They use the web for 10-20 minutes studying the weather forecast.
     </section>
     <section>
         <h2> Peer Review </h2>
-        <p></p>
+        <p> The persons who reviewed my site are Parker and Weston. Parker said that the changes that he noticed were that the summary and current conditions needed to be grouped together.I didn't receive feedback on time from Weston.</p>
     </section>
 
 </main>
