--- a/Homework/weather_analysis_persona.html
+++ b/Homework/weather_analysis_persona.html
@@ -12,8 +12,9 @@
     </style>
 </head>
 
-<div>
+
 <body>
+    <div>
 <div id="wrapper">
 <header>
     <h1>Weather Site Purpose Statment and Site Audience Persona</h1>
@@ -22,7 +23,7 @@
     <ul><li><a href= "https://aaronator1992.github.io/index.html">Homepage</a></li></ul>
 </nav>
 <main>
-<section id="purpose statment">
+<section id="purpose-statement">
 
 <h2>Weather Purpose Statement</h2>
 
@@ -32,7 +33,7 @@
 
 
 </section>
-<section id="audience persona">
+<section id="audience-persona">
 <h2> Site Audience Persona</h2>
 
 <p> Middle aged persons to old folk with families involved.<br>
@@ -94,6 +95,7 @@ Aaron Ferguson
 </ul>
 </footer>
 </div>
-</body>
     </div>
+</body>
+
 </html>
