--- a/Testing/html-css.html
+++ b/Testing/html-css.html
@@ -1,23 +1,45 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="en-us">
-<head>
-<meta charset="utf-8">
-<title>Testing</title>
-<link rel="stylesheet" type = "text/css" href="../Homework/css/style.css" media="screen">
-<script type="text/javascript">
-</script>
-</head>
-<body>
-<header>
-<div>
-<nav>
-<ul>
-<li>
-</li>
-</ul>
-</nav>
-</div>
-</header>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Distance</title>
+
+    <script>
+    </script>
+</head>
+
+<body>
+    <div id="wrapper">
+        <header id="header1">
+            <p>Weather</p>
+            <form id="page-search">
+                <input type="search" placeholder="Search by city, zipcode" name="q">
+                <input type="submit" name="submit">
+            </form>
+        </header>
+        <nav id="page-nav">
+            <ul>
+                <li>Home</li>
+                <li>Franklin</li>
+                <li>Springfield</li>
+                <li>Greenville</li>
+            </ul>
+        </nav>
+        <main>
+            <section id="top-row">
+                <header></header>
+                <footer></footer>
+            </section>
+            <section id="middle-row">
+                <header></header>
+                <footer></footer>
+            </section>
+        </main>
+        <footer>
+        </footer>
+    </div>
 </body>
+
 </html>
