--- a/Testing/html-css.html
+++ b/Testing/html-css.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../Homework/css/">
     <meta name="viewport" content="width=device-width">
-    <title>Distance</title>
+    <title>Html-CSS</title>
 
     <script>
     </script>
@@ -28,16 +29,35 @@
             </ul>
         </nav>
         <main>
+            <h1>Springfield, Il</h1>
+            <ul id="hi-lo">
+                <li>High
+                    <br> 77&deg;<sup>F</sup></li>
+                <li><img src="#" alt="partly cloudy"></li>
+                <br> Partly Cloudy
+                <li>50&deg;<sup>F</sup> </li>
+                <li>lorem ipsum dol etset cornadia. lorem ipsum dol etset cornadia. lorem ipsum dol etset cornadia. lorem ipsum dol etset cornadia. lorem ipsum dol etset cornadia. lorem ipsum dol etset cornadia.</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+            <!--
             <section id="top-row">
-                <header></header>
+                <header><h1> Springfield</h1></header>
                 <footer></footer>
             </section>
             <section id="middle-row">
                 <header></header>
                 <footer></footer>
             </section>
+            <section id="bottom-row">
+                <header></header>
+                <footer></footer>
+            </section>-->
         </main>
-        <footer>
+        <footer id="page-footer">
+
         </footer>
     </div>
 </body>
