--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title> Temporary Homepage </title>
-<link rel="stylesheet" href="/Homework/css/style.css">
+    <meta charset="utf-8">
+    <title> Temporary Homepage </title>
+    <link rel="stylesheet" href="/Homework/css/style.css">
 </head>
 
 
-        <header>
-        <h1>Temporary Homepage</h1>
-        <nav>
-            <ul>
+<header>
+    <h1>Temporary Homepage</h1>
+    <nav class="id">
+        <ul>
             <li><a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a></li>
             <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
             <li><a href="https://aaronator1992.github.io/Homework/weather_analysis_persona.html">Weather Analysis Persona</a></li>
-                <li> <a href = "https://aaronator1992.github.io/WDD-100/index.html"> WDD-100 </a></li>
-            </ul>
-        </nav>
-    </header>
+            <li> <a href="https://aaronator1992.github.io/WDD-100/index.html"> WDD-100 </a></li>
+        </ul>
+    </nav>
+</header>
 
 
-    <body>
-
+<body>
+    <div>
         <h2> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
+    </div>
+    <footer>
+    </footer>
+</body>
 
-    </body>
-  </html>
 
+</html>
