--- a/Testing/html-css.html
+++ b/Testing/html-css.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../Homework/css/">
+    <link rel="stylesheet" href="../Homework/css/html-css.css">
     <meta name="viewport" content="width=device-width">
-    <title>Html-CSS</title>
+    <title>Franklin Il Weather Info</title>
 
     <script>
     </script>
@@ -14,47 +14,46 @@
 <body>
     <div id="wrapper">
         <header id="header1">
-            <p>Weather</p>
+            <nav id="page-nav">
+                <ul>
+                    <li>Home</li>
+                    <li>Franklin</li>
+                    <li>Springfield</li>
+                    <li>Greenville</li>
+                </ul>
+            </nav>
             <form id="page-search">
                 <input type="search" placeholder="Search by city, zipcode" name="q">
                 <input type="submit" name="submit">
             </form>
         </header>
-        <nav id="page-nav">
-            <ul>
-                <li>Home</li>
-                <li>Franklin</li>
-                <li>Springfield</li>
-                <li>Greenville</li>
-            </ul>
-        </nav>
+
+
         <main>
-            <h1>Springfield, Il</h1>
-            <ul id="hi-lo">
-                <li>High
-                    <br> 77&deg;<sup>F</sup></li>
-                <li><img src="#" alt="partly cloudy"></li>
-                <br> Partly Cloudy
-                <li>50&deg;<sup>F</sup> </li>
-                <li>lorem ipsum dol etset cornadia. lorem ipsum dol etset cornadia. lorem ipsum dol etset cornadia. lorem ipsum dol etset cornadia. lorem ipsum dol etset cornadia. lorem ipsum dol etset cornadia.</li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-            <!--
+            <div id="ded">
+                <h1>Franklin, Id</h1>
+                <ul id="hi-lo">
+                    <li><img src="/Aaronator1992.github.io/Images/sunny-day.png" alt="sunny"></li>
+                    <li>High: 90&deg;<sup>F</sup> </li>
+                    <li>low: 66&deg;<sup>F</sup> </li>
+                    <li>Precip: 0, </li>
+                    <li> Wind: 1-5</li>
+                    <li>Direction: Southwest</li>
+                    <li>Summary: Sunny</li>
+                </ul>
+            </div>
+
             <section id="top-row">
-                <header><h1> Springfield</h1></header>
-                <footer></footer>
+
             </section>
             <section id="middle-row">
                 <header></header>
-                <footer></footer>
+
             </section>
             <section id="bottom-row">
                 <header></header>
-                <footer></footer>
-            </section>-->
+
+            </section>
         </main>
         <footer id="page-footer">
 
