--- a/Testing/html-css.html
+++ b/Testing/html-css.html
@@ -14,32 +14,37 @@
 <body>
     <div id="wrapper">
         <header id="header1">
+            <nav id="page-nav">
 
+                <ul id="lo-hi">
+                    <li>Home</li>
+                    <li>Franklin</li>
+                    <li>Springfield</li>
+                    <li>Greenville</li>
+                </ul>
+            </nav>
             <form id="page-search">
                 <input type="search" placeholder="Search by city, zipcode" name="q">
                 <input type="submit" name="submit">
             </form>
         </header>
-        <nav id="page-nav">
-            <ul id="lo-hi">
-                <li>Home</li>
-                <li>Franklin</li>
-                <li>Springfield</li>
-                <li>Greenville</li>
-            </ul>
-        </nav>
+
 
         <main>
-            <div id="ded">
-                <h1>Franklin, Id</h1>
+            <div>
+                <h3 class="text">Franklin, Id</h3>
                 <ul id="hi-lo">
-                    <li><img src="/Aaronator1992.github.io/Images/sunny-day.png" alt="sunny"></li>
-                    <li>High: 90&deg;<sup>F</sup> </li>
-                    <li>low: 66&deg;<sup>F</sup> </li>
-                    <li>Precip: 0, </li>
-                    <li> Wind: 1-5</li>
-                    <li>Direction: Southwest</li>
-                    <li>Summary: Sunny</li>
+
+                    <li> High: 90&deg;<sup>F</sup> </li>
+                    <li>
+                        <div id="img"><img src="/Aaronator1992.github.io/Images/sunny-day.png" alt="sunny"></div>
+                    </li>
+                    <li> low: 66&deg;<sup>F</sup> </li>
+                    <li> Summary: Sunny </li>
+                    <li> Precip: 0 </li>
+                    <li> Wind: 1-5 </li>
+                    <li> Direction: Southwest </li>
+
                 </ul>
             </div>
         </main>
