--- a/Testing/html-css.html
+++ b/Testing/html-css.html
@@ -32,14 +32,14 @@
 
         <main>
             <div>
-                <h3 class="text">Franklin, Id</h3>
+                <h2 class="text">Franklin, Id</h2>
                 <ul id="hi-lo">
 
                     <li> High: 90&deg;<sup>F</sup> </li>
                     <li>
                         <div id="img"><img src="/Aaronator1992.github.io/Images/sunny-day.png" alt="sunny"></div>
                     </li>
-                    <li> low: 66&deg;<sup>F</sup> </li>
+                    <li> Low: 66&deg;<sup>F</sup> </li>
                     <li> Summary: Sunny </li>
                     <li> Precip: 0 </li>
                     <li> Wind: 1-5 </li>
