--- a/Testing/html-css.html
+++ b/Testing/html-css.html
@@ -37,13 +37,26 @@
 
                     <li> High: 90&deg;<sup>F</sup> </li>
                     <li>
-                        <div id="img"><img src="/Aaronator1992.github.io/Images/sunny-day.png" alt="sunny"></div>
+                        <div id="img"><img src="/Images/weather-channel-partly-cloudy-icon_13836.png" alt="Partly Cloudy"></div>
                     </li>
                     <li> Low: 66&deg;<sup>F</sup> </li>
                     <li> Summary: Sunny </li>
                     <li> Precip: 0 </li>
                     <li> Wind: 1-5 </li>
                     <li> Direction: Southwest </li>
+
+                </ul>
+                <ul id="hourly-temps">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
 
                 </ul>
             </div>
