--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1>Temporary Homepage</h1>
     <nav class="id">
         <ul>
-            <li><a href="https://aaronator1992.github.io/Homework/visitor_analysis_persona.html">Visitor Analysis</a></li>
+            <li><a href="https://aaronator1992.github.io/homework/visitor_analysis_persona.html">Visitor Analysis</a></li>
             <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
-            <li><a href="https://aaronator1992.github.io/Homework/weather_analysis_persona.html">Weather Analysis Persona</a></li>
-            <li><a href="https://aaronator1992.github.io/Testing/html-css.html"> Weather Site</a></li>
+            <li><a href="/homework/weather_analysis_persona.html">Weather Analysis Persona</a></li>
+            <li><a href="https://aaronator1992.github.io/testing/html-css.html"> Weather Site</a></li>
             <li> <a href="https://aaronator1992.github.io/WDD-100/index.html"> WDD-100 </a></li>
         </ul>
     </nav>
