--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title> Temporary Homepage </title>
-    <link rel="stylesheet" href="/Homework/css/style.css">
+    <link rel="stylesheet" href="">
 </head>
 
 
@@ -12,11 +12,11 @@
     <h1>Temporary Homepage</h1>
     <nav class="id">
         <ul>
-            <li><a href="https://Aaronator1992.github.io/homework/visitor_analysis_persona.html">Visitor Analysis</a></li>
+            <li><a href="https://aaronator1992.github.io/homework/visitor_analysis_persona.html">Visitor Analysis</a></li>
             <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
-            <li><a href="https://Aaronator1992.github.io/homework/weather_analysis_persona.html">Weather Analysis Persona</a></li>
-            <li><a href="https://Aaronator1992.github.io/testing/html-css.html"> Weather Site</a></li>
-            <li> <a href="https://aaronator1992.github.io/WDD-100/html/index.html"> WDD-100 </a></li>
+            <li><a href="https://aaronator1992.github.io/homework/weather_analysis_persona.html">Weather Analysis Persona</a></li>
+            <li><a href="https://aaronator1992.github.io/testing/html-css.html"> Weather Site</a></li>
+            <li> <a href="https:/aaaronator1992.github.io/wdd-100/html/index.html"> WDD-100 </a></li>
         </ul>
     </nav>
 </header>
