--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title> Temporary Homepage </title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/homework/css/style.css">
 </head>
 
 
