--- a/Testing/html-css.html
+++ b/Testing/html-css.html
@@ -44,6 +44,32 @@
 
                 </ul>
                 <ul id="hourly-temps">
+                    <li>Hourly:</li>
+                    <li>"0": 67</li>
+                    <li>"1": 67</li>
+                    <li>"2": 69</li>
+                    <li>"3": 69</li>
+                    <li> "4": 69</li>
+                    <li>"5": 70</li>
+                    <li> "6": 69</li>
+                    <li> "7": 72</li>
+                    <li> "8": 74</li>
+                    <li> "9": 77</li>
+                    <li> "10": 79</li>
+                    <li> "11": 81</li>
+                    <li> "12": 84</li>
+                    <li> "13": 86</li>
+                    <li> "14": 88</li>
+                    <li> "15": 90</li>
+                    <li> "16": 90</li>
+                    <li> "17": 85</li>
+                    <li> "18": 83</li>
+                    <li> "19": 79</li>
+                    <li> "20": 74</li>
+                    <li> "21": 70</li>
+                    <li> "22": 68</li>
+                    <li> "23": 66</li>
+
                     <li></li>
                     <li></li>
                     <li></li>
@@ -56,6 +82,10 @@
                     <li></li>
 
                 </ul>
+            </div>
+            <div><img src="/images/IMG_1748.JPG" alt="sketch1">
+                <img src="/images/IMG_1749.JPG" alt="sketch2">
+                <img src="/images/IMG_1750.JPG" alt="sketch3">
             </div>
         </main>
         <footer id="page-footer">
