--- a/Testing/html-css.html
+++ b/Testing/html-css.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../Homework/css/html-css.css">
+    <link rel="stylesheet" href="/homework/css/html-css.css">
     <meta name="viewport" content="width=device-width">
     <title>Franklin Il Weather Info</title>
 </head>
@@ -34,7 +34,8 @@
 
                     <li> High: 90&deg;<sup>F</sup> </li>
                     <li>
-                        <div id="img"><img src="/Images/weather-channel-partly-cloudy-icon_13836.png" alt="Partly Cloudy"></div>
+                        <div id="img">
+                            <!--<img src="/Images/weather-channel-partly-cloudy-icon_13836.png" alt="Partly Cloudy">--></div>
                     </li>
                     <li> Low: 66&deg;<sup>F</sup> </li>
                     <li> Summary: Sunny </li>
@@ -69,23 +70,11 @@
                     <li> "21": 70</li>
                     <li> "22": 68</li>
                     <li> "23": 66</li>
-
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-
                 </ul>
             </div>
-            <div><img src="/images/IMG_1748.JPG" alt="sketch1">
-                <img src="/images/IMG_1749.JPG" alt="sketch2">
-                <img src="/images/IMG_1750.JPG" alt="sketch3">
+            <div><img id="pic1" src="/images/IMG_1748.JPG" alt="sketch1">
+                <img id="pic2" src="/images/IMG_1749.JPG" alt="sketch2">
+                <img id="pic3" src="/images/IMG_1750.JPG" alt="sketch3">
             </div>
         </main>
         <footer id="page-footer">
