--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <li><a href="/homework/html/visitor_analysis_persona.html">Visitor Analysis</a></li>
             <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
             <li><a href="/homework/html/weather_analysis_persona.html">Weather Analysis Persona</a></li>
-            <li><a href="homework/html/franklin-weather.html"> Weather Site</a></li>
-            <li> <a href="../WDD-100/html/index.html"> WDD-100 </a></li>
+            <li><a href="/homework/html/franklin-weather.html"> Weather Site</a></li>
+            <li> <a href="../wdd-100/html/index.html"> WDD-100 </a></li>
         </ul>
     </nav>
 </header>
