--- a/homework/html/visitor_analysis_persona.html
+++ b/homework/html/visitor_analysis_persona.html
@@ -34,11 +34,11 @@ Use the web site you think did the best job of meeting visitor needs during your
 
                 <h2>Visitor Analysis</h2>
                 <!--Add paragraphs to address the items in the visitor considerations document-->
-                <p>The demographics for this site has several general demographics. The age can range from a 12 year old kid to an old geezer of 60-80 years of age.<br>
-                    The income for the auto enthusiast can range from middle class to very welthy persons. The geographic location ranges from the US to Japan and other countries.<br>
-                    The site creates an easy feel to the navigation. One simple click and you are in the article of your desired choice.<br>
-                    The simplicity of pictures mixed with headings creates a focused approach to the site. To find the content, you simply scroll through the images and find the one article to read.<br>
-                    If your need to find a specifoc catagory, you then find the search icon located at the top and type in your car that you want to find.</p>
+                <p>The demographics for this site has several general demographics. The age can range from a 12 year old kid to an old geezer of 60-80 years of age.
+                    <br> The income for the auto enthusiast can range from middle class to very welthy persons. The geographic location ranges from the US to Japan and other countries.
+                    <br> The site creates an easy feel to the navigation. One simple click and you are in the article of your desired choice.
+                    <br> The simplicity of pictures mixed with headings creates a focused approach to the site. To find the content, you simply scroll through the images and find the one article to read.
+                    <br> If your need to find a specifoc catagory, you then find the search icon located at the top and type in your car that you want to find.</p>
 
                 <!--Put the screenshot in the img element below-->
                 <figure>
@@ -48,18 +48,18 @@ Use the web site you think did the best job of meeting visitor needs during your
             <section id="persona">
                 <h2>Persona</h2>
 
-                <p> Automotive Tech<br>
-                    Van Fosberg<br>
-                    40 years of age<br>
-                    Married <br>
-                    Father of 2 children <br>
-                    Has a degree in Automotive Technology<br>
-                    He is enthusiastic, passionate in his work<br>
-                    Spends his work time working on projects<br>
-                    Communicates with his team on which car should come first<br>
-                    He is used to the computer amd refers to himself as an expert in web-browsing.<br>
-                    He is connected via T1 at work and xfinity at home.<br>
-                    He uses the web for 1 hour aranging apointments for work.
+                <p> Automotive Tech
+                    <br> Van Fosberg
+                    <br> 40 years of age
+                    <br> Married
+                    <br> Father of 2 children
+                    <br> Has a degree in Automotive Technology
+                    <br> He is enthusiastic, passionate in his work
+                    <br> Spends his work time working on projects
+                    <br> Communicates with his team on which car should come first
+                    <br> He is used to the computer amd refers to himself as an expert in web-browsing.
+                    <br> He is connected via T1 at work and xfinity at home.
+                    <br> He uses the web for 1 hour aranging apointments for work.
                 </p>
 
                 <!--Put the image of the persona in the img element below-->
@@ -67,14 +67,15 @@ Use the web site you think did the best job of meeting visitor needs during your
                     <img alt="" src="/images/Vaughn-Gittin.jpg">
                 </figure>
             </section>
-            <section id="site contrast"> <h2> Site Contrast</h2>
+            <section id="site contrast">
+                <h2> Site Contrast</h2>
                 <p>myBYUI</p>
                 <p> https//my.byui.edu</p>
-                <p>The worst website is https//my.byui.edu in terms of mobility. The speedhunter differs because anyone can sign up for classes at my.byui.edu on a laptop.<br>
-                   However, on a smart device, the BYUI site forces you to zoom in at times to push a button on the screen of the smart device.<br>
-                   The needs of the student showcases the situation in which the new student is getting to class for the first time.<br>
-                   They have to login to the site, then traverse several different access points to get to their needed information.<br>
-                   This is more complicated then just clicking the picture link for the article at speedhunters.
+                <p>The worst website is https//my.byui.edu in terms of mobility. The speedhunter differs because anyone can sign up for classes at my.byui.edu on a laptop.
+                    <br> However, on a smart device, the BYUI site forces you to zoom in at times to push a button on the screen of the smart device.
+                    <br> The needs of the student showcases the situation in which the new student is getting to class for the first time.
+                    <br> They have to login to the site, then traverse several different access points to get to their needed information.
+                    <br> This is more complicated then just clicking the picture link for the article at speedhunters.
                 </p>
             </section>
         </main>
@@ -84,8 +85,7 @@ Use the web site you think did the best job of meeting visitor needs during your
                 <li>
                     Aaron Ferguson
                 </li>
-                <li>Last Updated:
-                    1/21/2017
+                <li>Last Updated: 1/21/2017
                 </li>
             </ul>
         </footer>
@@ -93,5 +93,3 @@ Use the web site you think did the best job of meeting visitor needs during your
 </body>
 
 </html>
-
-
