--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <h1>Temporary Homepage</h1>
     <nav class="id">
-        <ul>
+        <ul class="list">
             <li><a href="/homework/html/visitor_analysis_persona.html">Visitor Analysis</a></li>
             <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
             <li><a href="/homework/html/weather_analysis_persona.html">Weather Analysis Persona</a></li>
