--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
             <li><a href="/homework/html/weather_analysis_persona.html">Weather Analysis Persona</a></li>
             <li><a href="/homework/html/franklin-weather.html"> Weather Site</a></li>
-            <li> <a href="../wdd-100/html/index.html"> WDD-100 </a></li>
+            <li> <a href="/homework/wdd-100/index.html"> WDD-100 </a></li>
         </ul>
     </nav>
 </header>
