--- a/homework/wdd-100/index.html
+++ b/homework/wdd-100/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Whitewater Rapids Vacation</title>
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="/homework/wdd-100/main.css">
 
 </head>
 
@@ -28,7 +28,7 @@
             </div>
         </header>
         <main>
-            <div id="banner"><img src="/images/GrandCanyonBanner.jpg" alt="Grand Canyon Banner"></div>
+            <div id="banner"><img src="/homework/wdd-100/GrandCanyonBanner.jpg" alt="Grand Canyon Banner"></div>
 
             <section id="top-row">
                 <div class="leftcol">
@@ -41,14 +41,14 @@
                     </p>
                 </div>
                 <div class="rightcol">
-                    <img class="img1" src="../images/grandcanyonrafting.jpg" alt="Kayakers restfully moving along the river!">
+                    <img class="img1" src="/homework/wdd-100/grandcanyonrafting.jpg" alt="Kayakers restfully moving along the river!">
                 </div>
 
             </section>
 
             <section id="middle-row">
                 <div class="leftcol">
-                    <img class=" img2" src="../images/Guide-to-The-Grand-Canyon-Rafting-Tours.jpg" alt="kayakers resting near a waterfall">
+                    <img class=" img2" src="/homework/wdd-100/Guide-to-The-Grand-Canyon-Rafting-Tours.jpg" alt="kayakers resting near a waterfall">
                 </div>
                 <div class="rightcol">
                     <h2>Rapids do invite appreciation for calm rivers</h2>
@@ -75,10 +75,10 @@
                 <div class="copy-right">
                     <p> &copy; 2017 Dry Oar Aaron Ferguson</p>
                 </div>
-                <a target="_blank" href="https://www.facebook.com/"> <img src="social-inside-facebook-icon%20.png" alt="Facebook icon"></a>
-                <a target="_blank" href="https://twitter.com/"> <img src="social-inside-twitter-icon%20.png" alt="Twitter icon"></a>
-                <a target="_blank" href="https://www.linkedin.com/"> <img src="social%20-%20inside-LinkedIn-icon.png" alt="LinkedIn icon"></a>
-                <a target="_blank" href="https://www.youtube.com/"> <img src="social-inside-youtube-icon%20.png" alt="Youtube icon"></a>
+                <a target="_blank" href="https://www.facebook.com/"> <img src="/homework/wdd-100/social-inside-facebook-icon%20.png" alt="Facebook icon"></a>
+                <a target="_blank" href="https://twitter.com/"> <img src="/homework/wdd-100/social-inside-twitter-icon%20.png" alt="Twitter icon"></a>
+                <a target="_blank" href="https://www.linkedin.com/"> <img src="/homework/wdd-100/social%20-%20inside-LinkedIn-icon.png" alt="LinkedIn icon"></a>
+                <a target="_blank" href="https://www.youtube.com/"> <img src="/homework/wdd-100/social-inside-youtube-icon%20.png" alt="Youtube icon"></a>
             </div>
 
         </footer>
