--- a/homework/wdd-100/rivers.html
+++ b/homework/wdd-100/rivers.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Whitewater Rapids Vacation</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/homework/wdd-100/main.css">
     <link href='//fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
     <style>
 
@@ -23,7 +23,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="/html/rates.html">Rates</a></li>
+                        <li><a href="/homework/wdd-100/rates.html">Rates</a></li>
                     </ul>
                 </nav>
             </div>
